Fixed horizontal scroll and added hover color to scrollToTop button

--- a/public/assets/css/mainstyle.css
+++ b/public/assets/css/mainstyle.css
@@ -12,6 +12,7 @@ Theme colors: https://coolors.co/330036-38182f-2f394d-56666b-eee1b3
 /* header */
 .header {
   height: 600px;
+  width: 100%;
   margin-bottom: 100px;
   color: #38182F;
   background-color: #fff;
@@ -39,7 +40,7 @@ Theme colors: https://coolors.co/330036-38182f-2f394d-56666b-eee1b3
   position: inherit;
   top: 0px;
   height: 100%;
-  width: 100%;
+  /*width: 100%;*/
   background-image: url('./../../img/gameData.png');
 }
 
@@ -55,6 +56,11 @@ Theme colors: https://coolors.co/330036-38182f-2f394d-56666b-eee1b3
   right: 25px;
   box-shadow: 0px 5px 20px black;
 }
+
+#scrollToTopButton:hover {
+  background-color: #91b6d4;
+}
+
 
 .center-icon {
   position: relative;
@@ -152,6 +158,7 @@ body {
   height:100%;
   background-color: #fff;
   color: #38182F;
+  overflow-x: hidden;
 }
 html {
     display:table;
